[package]
name = "creator-payer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "creator_payer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
solana-program = "1.9.29"
